fixing searchbox placeholder so it shows properly on IOS devices, attempting to fix broken favicon problem

--- a/src/components/search-box/search-box.styles.scss
+++ b/src/components/search-box/search-box.styles.scss
@@ -6,12 +6,14 @@
     // border: 3px solid black;
     // background-image: linear-gradient(180deg, #68829E 0%, #AEBD38 100%);
     box-shadow: 0 0 10px #000000;
+    -webkit-box-shadow: 0 0 10px #000000;
     text-align: center;
     color: #2A3132;
     text-transform: uppercase;
     font-weight: bold;
     font-family: 'Permanent Marker', cursive;
     transition: .5s;
+    -webkit-appearance: none;
 
     &:focus {
         box-shadow: 0 0 20px #000000;
@@ -23,5 +25,10 @@
         color: #000000;
         text-transform: uppercase;
         opacity: 0.8;
+
+        @media (max-width: 990px) {
+            font-size: 10px;
+            font-weight: 100f;
+        }
     }
 }
