--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,5 @@
 html {
   min-height: 100vh;
-  -webkit-appearance: none;
 }
 
 body {
